crates/nash-can/tests/snapshots/kinds__annotation_storable_parameter.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\nf : 'a -> list 'a -> list 'a\nf x xs = xs\n"
---
(
    [],
    [],
)
