crates/nash-can/tests/snapshots/kinds__applied_head_is_a_free_variable.snap
---
source: crates/nash-can/tests/kinds.rs
expression: errors
---
[
    TypeVarsUnboundInUnion {
        region: Region {
            start: Position {
                line: 3,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
        name: "wrap",
        args: [
            "a",
        ],
        unbound: (
            "f",
            Region {
                start: Position {
                    line: 3,
                    column: 22,
                },
                end: Position {
                    line: 3,
                    column: 24,
                },
            },
        ),
        more_unbound: [],
    },
]
