crates/nash-can/tests/snapshots/kinds__base_kinded_parameter_cannot_be_applied.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype wrong 'f = Wrong 'f ('f Int)\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in field 2 of little constructor `Wrong` in `wrong`.
   ╭─[src/Main.nash:6:30]
 5 │ 
 6 │ type wrong 'f = Wrong 'f ('f Int)
   ·                              ───
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
