crates/nash-can/tests/snapshots/kinds__big_alias.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias Id = Int\n"
---
(
    [],
    [
        (
            "Id",
            Type,
            [],
        ),
    ],
)
