crates/nash-can/tests/snapshots/kinds__big_field_const.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype Datum = Datum bytes\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in field 1 of Big constructor `Datum` in `Datum`:
   ╭─[src/Main.nash:6:20]
 5 │ 
 6 │ type Datum = Datum bytes
   ·                    ─────
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
