crates/nash-can/tests/snapshots/kinds__big_field_tuple.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype Datum = Datum (Int, Int)\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in field 1 of Big constructor `Datum` in `Datum`:
   ╭─[src/Main.nash:6:20]
 5 │ 
 6 │ type Datum = Datum (Int, Int)
   ·                    ──────────
   ╰────
  help: The type has `Term` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
