crates/nash-can/tests/snapshots/kinds__big_parameter.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype Box 'a = Box 'a\n"
---
(
    [
        (
            "Box",
            Arrow(
                Type,
                Type,
            ),
            [
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "base",
                                },
                            ),
                            name: "Primitive",
                        },
                        name: "Big",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 19,
                                },
                                end: Position {
                                    line: 6,
                                    column: 21,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            ],
        ),
    ],
    [],
)
