crates/nash-can/tests/snapshots/kinds__big_record_alias.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias Vault = { owner : Bytes, amount : Int }\n"
---
(
    [],
    [
        (
            "Vault",
            Type,
            [],
        ),
    ],
)
