crates/nash-can/tests/snapshots/kinds__big_record_field_rejects_const.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias Vault = { amount : int }\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in field `amount` of Big record alias `Vault`:
   ╭─[src/Main.nash:6:31]
 5 │ 
 6 │ type alias Vault = { amount : int }
   ·                               ───
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
