crates/nash-can/tests/snapshots/kinds__big_union.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype Box = Box Int\n"
---
(
    [
        (
            "Box",
            Type,
            [],
        ),
    ],
    [],
)
