crates/nash-can/tests/snapshots/kinds__binary_self_application_fails_the_occurs_check.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype s 'f 'a = S ('f 'f 'a)\ntype tag 'a = Tag\ntype w = W (s s tag)\n"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `S` in `s` would require an
  │ infinite kind:
   ╭─[src/Main.nash:6:22]
 5 │ 
 6 │ type s 'f 'a = S ('f 'f 'a)
   ·                      ──
 7 │ type tag 'a = Tag
   ╰────
  help: Check the type application and the kinds of its arguments.
