crates/nash-can/tests/snapshots/kinds__composition_rejects_inconsistent_higher_kinded_arguments.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype tag 'a = Tag\ntype option 'a = Some 'a\ntype app 'f 'a = App ('f 'a)\ntype wrap 'f 'g 'a = Wrap ('f ('g 'a))\ntype w = W (wrap (app tag) app option)\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in field 1 of little constructor `W` in `w`.
    ╭─[src/Main.nash:10:28]
  9 │ type wrap 'f 'g 'a = Wrap ('f ('g 'a))
 10 │ type w = W (wrap (app tag) app option)
    ·                            ───
    ╰────
  help: Expected kind `Type`, found `Type -> Type`.
